[package]
name = "unm-ffmpeg-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "~0.12.0"
actix-web = { version = "^4.0.0-beta.10", features = ["rustls"] }
awc = { version = "^3.0.0-beta.9", features = ["default", "rustls"] }
futures-util = "~0.3.17"
http = "~0.2.5"
log = "~0.4.14"
tempfile = "^3.2.0"
thiserror = "^1.0.30"
tokio = { version = "^1.13.0", features = ["full"] }
tokio-stream = "~0.1.8"
